# picta-dl-gui

./: .astylerc  .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Changelog.txt  Picta-dl_GUI.pro  Picta-dl_GUI.pro.user.Esj324  Picta-dl_GUI.pro.user.Kp2276  README.md  RunGuard.cpp  RunGuard.h  TestPicta-dl_GUI.pro  configuration.cpp  configuration.h  configuration.ui  get-version.sh  information.cpp  information.h  information.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_installer.sh  makedeb.sh  makerpm.sh  picta-dl-gui.desktop  picta-dlg  picta-dlg.sh  simplecrypt.cpp  simplecrypt.h  version.h
.github/workflows/: release.yml  tests.yml
Resources/: Picta-dl_GUI.exe.manifest  images.qrc  mainprocess.qrc  resManifest.rc  styles.qrc
Resources/Logos/: Info.plist  icon.icns
Resources/Styles/: winApp.qss
Resources/dark/: style.qss
Resources/light/: style.qss
deployment/linux/debian/: README.Debian  changelog  control  copyright  files  menu  rules
deployment/linux/openSUSE/: picta-dl-gui.spec
deployment/qtifw/config/: config.xml
deployment/repository/: 2021-06-29-2027_meta.7z  Updates.xml
deployment/repository/cu.pictadl.gui/: 0.12.28content.7z.sha1  0.12.28meta.7z
deployment/windows/config/: config.xml
docs/: MSYS2-MINGW-Qt5-AStyle.md  faq.md
docs/bouml/: uml.prj
tests/: testmainwindow.cpp  testmainwindow.h
